--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Tera web</title>                  <!--Change for your own title-->
+    <title>Cheezevich's Art Gallery</title>                  <!--Change for your own title-->
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/typography.css">
     <link rel="stylesheet" href="css/lightbox.css">
@@ -16,41 +17,41 @@
     <header>
       <nav class="content">
         <h1>
-          <a href="index.html">Tera Art Gallery</a> <!--Change for your own title for the banner-->
+          <a href="index.html"></a> <!--Change for your own title for the banner-->
         </h1>
         <ul>
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html">FRONT PAGE</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <article id="page" class="content">
-      <h2>My Gallery</h2>                <!--Change for your own title-->
+      <h2>Art Work</h2>                <!--Change for your own title-->
       <p>
-      Write your texting here              <!--Write your texting-->
+      Hi, I was forced to write something about myself so I'll just say I hate stairs and I like video games              <!--Write your texting-->
       </p>
       
       <ul class="gallery">
         <li>
-          <a data-lightbox="image-1" href="img/brunobig.jpg"> <!--Add your own big jpg-->
-            <img src="img/brunosmall.jpg">                 <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Art01.jpg"> <!--Add your own big jpg-->
+            <img src="img/Art01.jpg">                 <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-2-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-2-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Art02.jpg"> <!--Add your own big jpg-->
+            <img src="img/Art02.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-3-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-3-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Art03.jpg"> <!--Add your own big jpg-->
+            <img src="img/Art03.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         <li>
-          <a data-lightbox="image-1" href="img/photos/photo-4-800x800.jpg"> <!--Add your own big jpg-->
-            <img src="img/photos/photo-4-200x200.jpg"> <!--Add your own small jpg-->
+          <a data-lightbox="image-1" href="img/Art04.jpg"> <!--Add your own big jpg-->
+            <img src="img/Art04.jpg"> <!--Add your own small jpg-->
           </a>
         </li>
         
@@ -60,7 +61,7 @@
      <p> </p>
     <footer>
       <div class="content">
-        <p>Reflections of your work</p>      <!--Reflections about your artwork-->
+        <p>As a reflection to [Computer Arts] I pretty much like doing the work provided and its a great breather after doing physical training because it's not stressful. We had posters, pictures, websites, lamp making AND bridge modeling. But the one thing that is the best I've done was definitely this website. You can see most of my artwork (assuming they aren't copyrighted things because I don't wanna get sued) that I have done in my whole Sophomore year and (Hopefully) Junior and Senior year.</p>      <!--Reflections about your artwork-->
       </div>
     </footer>
   </body>
